# AtmosphereLutGenerator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_debug.sh  build_release.sh  compile_commands.json  debug_core_file.sh
.cache/clangd/index/: main.cpp.2CB456FEE75CD15E.idx
include/: derballo.containers.array_view.hpp  derballo.debug.macros.hpp  derballo.format.vkresult.hpp  derballo.globals.hpp  derballo.math.matrix.hpp  derballo.math.scalar.hpp  derballo.math.vector.hpp  derballo.universal.hpp  derballo.utils.hpp  derballo.utils.macros.hpp  derballo.utils.ptr.hpp  derballo.vk.buffer.hpp  derballo.vk.command_buffer.hpp  derballo.vk.command_pool.hpp  derballo.vk.compute_pipeline.hpp  derballo.vk.descriptor_pool.hpp  derballo.vk.descriptor_set.hpp  derballo.vk.descriptor_set_layout.hpp  derballo.vk.device.hpp  derballo.vk.fence.hpp  derballo.vk.gpu.hpp  derballo.vk.image.hpp  derballo.vk.image_view.hpp  derballo.vk.instance.hpp  derballo.vk.pipeline_layout.hpp  derballo.vk.pnext_chain.hpp  derballo.vk.sampler.hpp  derballo.vk.semaphore.hpp  derballo.vk.shader_module.hpp  pch.hpp
resources/: shader.slang  shader.spv
src/: main.cpp
